--- a/05-sharding-deepspeed/ds_config.json
+++ b/05-sharding-deepspeed/ds_config.json
@@ -1,7 +1,7 @@
 {
-    "train_micro_batch_size_per_gpu": 64,
+    "train_micro_batch_size_per_gpu": 1,
     "optimizer": {
-        "type": "Adam",
+        "type": "AdamW",
         "params": {
             "lr": 3e-5
         }
